--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,4 +8,7 @@
     </ul>
   </nav>
   <h3>Learn Enough <span>to Be Dangerous</span></h3>
+  <!-- <ul class="footer-social social-links">
+    {% include social-links.html %}
+  </ul> -->
 </footer>
