Finish the JavaScript gallery

--- a/_includes/nav-links.html
+++ b/_includes/nav-links.html
@@ -9,5 +9,5 @@
     {% endfor %}
   </ul>
 </li>
-<li><a href="/blog"></a></li>
+<li class="dropdown-link"><a href="/blog"></a></li>
 <li><a href="{{ site.posts.first.url }}">Newest Post</a></li>
